fixed animation breaking navigation on smaller device width

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,3 +1,7 @@
+#about-me {
+    overflow: hidden;
+}
+
 .about-me-section {
     display: flex;
     height: 25vh;
